--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,35 @@
     <script src="./js/main.js" defer></script>
   </head>
   <body>
-        
+    <div>
+      <a href="#anchor">scroll to anchor</a>
+    </div>
+    <div>
+      <a href="http://tut.by">External link http://tut.by </a>
+    </div>
+    <div>
+      <a href="./index2.html">Internal link to /index2.html</a>
+    </div>
+    <div>
+      <a href="mailto:heitfully@mail.ru">mail</a>
+    </div>
+    <div>
+      <a href="skype:test"> skype kontaKT </a>
+    </div>
+    <img 
+      src="https://pbs.twimg.com/media/EvMIyn8U4AEel6Y.jpg" 
+      alt="epmty image">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br> 
+
+    <div id="anchor">anchor</div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
   </body>
 </html>
 
