--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
       In this task, we’ve studied blocks and inline HTML elements and tries to use them for the first time.
       
     </div>
+    <div>
+      <h2>Links:</h2>
+    </div>
     
   </body>
 </html>
