--- a/src/index.html
+++ b/src/index.html
@@ -47,9 +47,15 @@
           Meet the team
         </header>
         <div class="three-columns">
-          <div class="three-columns__item">1</div>
-          <div class="three-columns__item">2</div>
-          <div class="three-columns__item">3</div>
+          <div class="three-columns__item">
+            @@include('./partials/team-card/_team-cadd.html')
+          </div>
+          <div class="three-columns__item">
+            @@include('./partials/team-card/_team-cadd.html')
+          </div>
+          <div class="three-columns__item">
+            @@include('./partials/team-card/_team-cadd.html')
+          </div>
         </div>
 
       </section>
