--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,35 @@
     <script src="./js/main.js" defer></script>
   </head>
   <body>
+    <main class="main">
+
+      <header class="header">
+
+      </header>
+      <div class="two-blocks">
+       <div class="two-blocks__left">
+
+        </div>
+        <div class="two-blocks__right">
+
+        </div>
+      </div>
+      <div class="three-blocks">
+        <div class="three-blocks__red">
+
+        </div>
+        <div class="three-blocks__blue">
+
+        </div>
+        <div class="three-blocks__yellow">
+
+       </div>
+      </div>
+      <section class="block-grey">
+
+      </section>
+    </main>
+   
         
   </body>
 </html>
