--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,18 @@
     <script src="./js/main.js" defer></script>
   </head>
   <body>
-    
+    <div class="header">
+      Header
+
+    </div>
+    <div class="main-content">
+      main content
+
+    </div>
+    <div class="footer">
+      footer
+
+    </div>
         
   </body>
 </html>
