--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,13 @@
   <body>
     <header class="container">
       header
+      <div class="picture-blog">
+        <div class="picture-blog-img"> 
+          <img src="/img/blog.png" alt=""> 
+          blog        
+        </div>
+        
+      </div>
     </header>
     <div class="banner">
       <div class="container">
