--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <header class="container">
       header
       <div class="picture-blog">
-        <div class="picture-blog-img"> 
+        <div class="picture-blog__img"> 
           <img src="/img/blog.png" alt=""> 
           blog        
         </div>
