--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,24 @@
   </head>
   <body>
     <header class="container">
-      header
+      
       <div class="picture-blog">
+        <div class="picture-blog__img"> 
+          <img src="/img/blog.png" alt=""> 
+          blog        
+        </div>
+        <div class="picture-blog__img"> 
+          <img src="/img/blog.png" alt=""> 
+          blog        
+        </div>
+        <div class="picture-blog__img"> 
+          <img src="/img/blog.png" alt=""> 
+          blog        
+        </div>
+        <div class="picture-blog__img"> 
+          <img src="/img/blog.png" alt=""> 
+          blog        
+        </div>
         <div class="picture-blog__img"> 
           <img src="/img/blog.png" alt=""> 
           blog        
