--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,21 @@
              <img class="imglogo" src="/img/pizaahut_logo.jpg" >
            </div>
            <div class="header__nav">
-               <ul>Главная</ul>
-               <ul>Меню</ul>
-               <ul>О нас</ul>
-               <ul>заказать онлайн</ul>
-               <ul>контакты</ul>
+               <ul>
+                 <a class="header__menu" href="#">Главная</a>
+               </ul>
+               <ul>
+                <a class="header__menu" href="#">Главная</a>
+               </ul>
+               <ul>
+                <a class="header__menu" href="#">Главная</a>
+               </ul>
+               <ul>
+                <a class="header__menu" href="#">Главная</a>
+               </ul>
+               <ul>
+                 <a class="header__menu" href="#">Главная</a>
+               </ul>
            </div>
             </div>
           </div>
@@ -33,7 +43,7 @@
         
 
       </div>
-      <div class=""></div>
+      <div class="HOT"></div>
 
     </main>
     
