--- a/src/index.html
+++ b/src/index.html
@@ -15,20 +15,20 @@
              <img class="imglogo" src="/img/pizaahut_logo.jpg" >
            </div>
            <div class="header__nav">
-               <ul>
-                 <a class="header__menu" href="#">Главная</a>
+               <ul class="header__menu">
+                 <a  href="#">Главная</a>
                </ul>
-               <ul>
-                <a class="header__menu" href="#">Главная</a>
+               <ul class="header__menu">
+                <a  href="#">Главная</a>
                </ul>
-               <ul>
-                <a class="header__menu" href="#">Главная</a>
+               <ul class="header__menu">
+                <a href="#">Главная</a>
                </ul>
-               <ul>
-                <a class="header__menu" href="#">Главная</a>
+               <ul class="header__menu">
+                <a  href="#">Главная</a>
                </ul>
-               <ul>
-                 <a class="header__menu" href="#">Главная</a>
+               <ul class="header__menu">
+                 <a  href="#">Главная</a>
                </ul>
            </div>
             </div>
