--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,29 @@
         
 
       </div>
-      <div id="HOT" class="HOT"></div>
+         <H2>Блюдо дня</H2>
+        <div class="sss"></div>
+        <div class="splide">
+          <div class="splide__track">
+            <ul class="splide__list">         
+              <li class="splide__slide">
+                <img src="/img/pizzaone.jpg" alt="">
+                <H2 cl="">Peperoni</H2>
+                <p class="splide__stock">-40%</p>
+              </li>
+              <li class="splide__slide">
+                <img src="/img/pizzatwo.jpg" alt="">
+                <H2 class="">Diablo</H2>
+                <p class="splide__stock">-30%</p>
+              </li>
+              <li class="splide__slide">
+                <img src="/img/pizzathree.jpg" alt="">
+                <H2>Mexikano</H2>
+                <p class="splide__stock">-40%</p>
+              </li>
+            </ul>
+          </div>
+        </div>
 
     </main>
     
