--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,15 @@
             </ul>
           </div>
         </div>
+        <script>
+          new Splide( '.splide', {
+            type : 'loop',
+            cover  : true,
+            height : '30rem',
+            autoplay: 'boolean',        
+            width: '80rem'
+          } ).mount();
+        </script>
 
     </main>
     
