--- a/src/index.html
+++ b/src/index.html
@@ -89,70 +89,41 @@
     <H2 id="111">Блюдо дня</H2>
      <div class="sss"></div>
     <section class="menu">
-     
-
       <div class="menu__menu-card">
-        <img src="/img/pizzaone.jpg" alt="">
-        <h4 class="menu__textm"> Peperoni </h4>
-        <p class="menu__texty">Lorem ipsum dolor sit amet, consectetur adipisicing elit.xczdczvdddsdf f sdf sfgdf gdf gdf gdf ggfdg dfg dfg df. </p>
-        <button class="menu__buttom">Заказать</button>
+        @@include('./partials/menu-card/_arcticle.html')
 
       </div>
       <div class="menu__menu-card">
-        <img src="/img/pizzaone.jpg" alt="">
-        <h4 class="menu__textm"> Peperoni </h4>
-        <p class="menu__texty">Lorem ipsum dolor sit amet, consectetur adipisicing elit.xczdczvdddsdf f sdf sfgdf gdf gdf gdf ggfdg dfg dfg df. </p>
-        <button class="menu__buttom">Заказать</button>
+        @@include('./partials/menu-card/_arcticle.html')
 
       </div>
       <div class="menu__menu-card">
-        <img src="/img/pizzaone.jpg" alt="">
-        <h4 class="menu__textm"> Peperoni </h4>
-        <p class="menu__texty">Lorem ipsum dolor sit amet, consectetur adipisicing elit.xczdczvdddsdf f sdf sfgdf gdf gdf gdf ggfdg dfg dfg df. </p>
-        <button class="menu__buttom">Заказать</button>
+        @@include('./partials/menu-card/_arcticle.html')
 
       </div>
       <div class="menu__menu-card">
-        <img src="/img/pizzaone.jpg" alt="">
-        <h4 class="menu__textm"> Peperoni </h4>
-        <p class="menu__texty">Lorem ipsum dolor sit amet, consectetur adipisicing elit.xczdczvdddsdf f sdf sfgdf gdf gdf gdf ggfdg dfg dfg df. </p>
-        <button class="menu__buttom">Заказать</button>
+        @@include('./partials/menu-card/_arcticle.html',{
+        "imgPath": "/img/house.jpg",
+        "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
+            })
+      </div>
+      <div class="menu__menu-card">
+        @@include('./partials/menu-card/_arcticle.html')
 
       </div>
       <div class="menu__menu-card">
-        <img src="/img/pizzaone.jpg" alt="">
-        <h4 class="menu__textm"> Peperoni </h4>
-        <p class="menu__texty">Lorem ipsum dolor sit amet, consectetur adipisicing elit.xczdczvdddsdf f sdf sfgdf gdf gdf gdf ggfdg dfg dfg df. </p>
-        <button class="menu__buttom">Заказать</button>
+        @@include('./partials/menu-card/_arcticle.html')
+      </div>
+      <div class="menu__menu-card">
+        @@include('./partials/menu-card/_arcticle.html')
 
       </div>
       <div class="menu__menu-card">
-        <img src="/img/pizzaone.jpg" alt="">
-        <h4 class="menu__textm"> Peperoni </h4>
-        <p class="menu__texty">Lorem ipsum dolor sit amet, consectetur adipisicing elit.xczdczvdddsdf f sdf sfgdf gdf gdf gdf ggfdg dfg dfg df. </p>
-        <button class="menu__buttom">Заказать</button>
+        @@include('./partials/menu-card/_arcticle.html')
 
       </div>
       <div class="menu__menu-card">
-        <img src="/img/pizzaone.jpg" alt="">
-        <h4 class="menu__textm"> Peperoni </h4>
-        <p class="menu__texty">Lorem ipsum dolor sit amet, consectetur adipisicing elit.xczdczvdddsdf f sdf sfgdf gdf gdf gdf ggfdg dfg dfg df. </p>
-        <button class="menu__buttom">Заказать</button>
-
-      </div>
-      <div class="menu__menu-card">
-        <img src="/img/pizzaone.jpg" alt="">
-        <h4 class="menu__textm"> Peperoni </h4>
-        <p class="menu__texty">Lorem ipsum dolor sit amet, consectetur adipisicing elit.xczdczvdddsdf f sdf sfgdf gdf gdf gdf ggfdg dfg dfg df. </p>
-        <button class="menu__buttom">Заказать</button>
-
-      </div>
-      <div class="menu__menu-card">
-        <img src="/img/pizzaone.jpg" alt="">
-        <h4 class="menu__textm"> Peperoni </h4>
-        <p class="menu__texty">Lorem ipsum dolor sit amet, consectetur adipisicing elit.xczdczvdddsdf f sdf sfgdf gdf gdf gdf ggfdg dfg dfg df. </p>
-        <button class="menu__buttom">Заказать</button>
-
+        @@include('./partials/menu-card/_arcticle.html')
       </div>
 
     </section>
