--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,16 @@
      <div class="sss"></div>
     <section class="menu">
       <div class="menu__menu-card">
-        @@include('./partials/menu-card/_arcticle.html')
+          <div class="menu_img">
+          </div>
+  
+          <h4 class="menu__textm"> Peperoni
+          </h4>
+  
+           <p class="menu__texty">@CardContent
+           </p>
+      
+             <button class="menu__buttom">Заказать</button>
 
       </div>
       <div class="menu__menu-card">
@@ -103,7 +112,7 @@
       </div>
       <div class="menu__menu-card">
         @@include('./partials/menu-card/_arcticle.html',{
-        "imgPath": "/img/house.jpg",
+        "imgPath": "/img/pizzaone.jpg",
         "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
             })
       </div>
