--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,7 @@
              @@include('./partials/menu-card/_arcticle.html',
               {
             "imgPath": "/img/pizzaone.jpg",
+            "cardname": "peperoni",
             "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
                   })
 
@@ -100,7 +101,7 @@
             <div class="menu__menu-card">          
               @@include('./partials/menu-card/_arcticle.html',
             {
-            "imgPath": "/img/pizzaone.jpg",
+            "imgPath": "/img/pizza4.png",
             "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
                   })
 
@@ -108,7 +109,7 @@
             <div class="menu__menu-card">          
               @@include('./partials/menu-card/_arcticle.html',
             {
-            "imgPath": "/img/pizzaone.jpg",
+            "imgPath": "/img/pizza5.png",
             "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
             })
 
@@ -116,7 +117,7 @@
             <div class="menu__menu-card">          
               @@include('./partials/menu-card/_arcticle.html',
             {
-            "imgPath": "/img/pizzaone.jpg",
+            "imgPath": "/img/pizzatwo.jpg",
             "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
             })
 
@@ -124,7 +125,7 @@
             <div class="menu__menu-card">          
               @@include('./partials/menu-card/_arcticle.html',
             {
-            "imgPath": "/img/pizzaone.jpg",
+            "imgPath": "/img/pizzathree.jpg",
             "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
             })
 
@@ -132,7 +133,7 @@
             <div class="menu__menu-card">          
               @@include('./partials/menu-card/_arcticle.html',
             {
-            "imgPath": "/img/pizzaone.jpg",
+            "imgPath": "/img/pizza6.png",
             "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
             })
 
@@ -140,7 +141,7 @@
             <div class="menu__menu-card">          
               @@include('./partials/menu-card/_arcticle.html',
             {
-            "imgPath": "/img/pizzaone.jpg",
+            "imgPath": "/img/pizza7.jpg",
             "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
             })
 
@@ -148,7 +149,7 @@
             <div class="menu__menu-card">          
               @@include('./partials/menu-card/_arcticle.html',
             {
-            "imgPath": "/img/pizzaone.jpg",
+            "imgPath": "/img/pizza8.jpg",
             "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
             })
 
@@ -156,7 +157,7 @@
             <div class="menu__menu-card">          
               @@include('./partials/menu-card/_arcticle.html',
             {
-            "imgPath": "/img/pizzaone.jpg",
+            "imgPath": "/img/pizza9.jpg",
             "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
             })
 
