--- a/src/index.html
+++ b/src/index.html
@@ -39,12 +39,12 @@
       <div class="banner">
         <div class="banner__mein">
           <h1 class="banner__title">PIZZA HUT POLAND</h1>
-          <p>Best pizza on world!</p>
+          <p>PIZZA Z DOWOZEM GDAŃSK</p>
           
         </div>
         <div class="title">
           <div class="title__text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, doloribus deserunt commodi, facilis illo eaque itaque sequi iure sunt omnis autem maiores ab amet distinctio quo laudantium molestiae, eos eveniet?
+            Na rynku działamy od 1998 roku, nieustannie rozwijając się i dokładając starań, by do naszych klientów trafiała najlepsza pizza. Gdańsk urzeknie Cię smakiem włoskiej kuchni, a nasza pizzeria z pewnością przypadnie Ci do gustu. Jedząc u nas lub zamawiając pizzę z dostawą, masz pewność, że ciasto będzie cienkie i pyszne. Wszystkie dodatki będą świeże i skomponowane w taki sposób, by stworzyć jak najlepsze, wyjątkowe połączenie. Z Pizzą Fabryka wybierzesz się w fascynujący świat włoskiej kuchni.
           </div>
           <div class="button">
             <button class="button__order">Сделать Заказа</button>
@@ -93,16 +93,18 @@
              @@include('./partials/menu-card/_arcticle.html',
               {
             "imgPath": "/img/pizzaone.jpg",
-            "cardname": "peperoni",
-            "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
+            "cardname": "Veggie Pizza",
+            "cardCena": "100$",
+            "cardContent": "When you want to jazz up your cheese pizza with color and texture, veggies are the perfect topping. And you’re only limited by your imagination."
                   })
 
             </div>
             <div class="menu__menu-card">          
               @@include('./partials/menu-card/_arcticle.html',
             {
-            "imgPath": "/img/pizza4.png",
-            "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
+            "imgPath": "/img/chess.jpg",
+            "cardname": "Cheese Pizza",
+            "cardContent": "It should be no shocker that a classic is the statistical favorite. Cheese pizza is one of the most popular choices. It will always be a simple, unadorned masterpiece on its own."
                   })
 
             </div>
@@ -110,7 +112,8 @@
               @@include('./partials/menu-card/_arcticle.html',
             {
             "imgPath": "/img/pizza5.png",
-            "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
+            "cardname": "Meat Pizza",
+            "cardContent": "If pepperoni just isn’t enough, and you’re looking for a pie with a bit more heft, a meat pizza is a perfect and popular choice. Pile on ground beef and sausage for a hearty meal."
             })
 
             </div>
@@ -118,6 +121,7 @@
               @@include('./partials/menu-card/_arcticle.html',
             {
             "imgPath": "/img/pizzatwo.jpg",
+            "cardname": "peperoni",
             "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
             })
 
@@ -126,7 +130,8 @@
               @@include('./partials/menu-card/_arcticle.html',
             {
             "imgPath": "/img/pizzathree.jpg",
-            "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
+            "cardname": "Pepperoni Pizza",
+            "cardContent": "There’s a reason this is one of the most popular types of pizza. Who doesn’t love biting into a crispy, salty round of pepperoni?"
             })
 
             </div>
@@ -134,7 +139,8 @@
               @@include('./partials/menu-card/_arcticle.html',
             {
             "imgPath": "/img/pizza6.png",
-            "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
+            "cardname": "Margherita Pizza",
+            "cardContent": "Deceptively simple, the Margherita pizza is made with basil, fresh mozzarella, and tomatoes. There’s a reason it’s an Italian staple and one of the most popular types of pizza in the country."
             })
 
             </div>
@@ -142,7 +148,8 @@
               @@include('./partials/menu-card/_arcticle.html',
             {
             "imgPath": "/img/pizza7.jpg",
-            "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
+            "cardname": "BBQ Chicken Pizza",
+            "cardContent": "If you love BBQ chicken and you love pizza, why not put them together? This has long been a cult favorite of sports fans and college kids. "
             })
 
             </div>
@@ -150,7 +157,8 @@
               @@include('./partials/menu-card/_arcticle.html',
             {
             "imgPath": "/img/pizza8.jpg",
-            "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
+            "cardname": "Hawaiian Pizza",
+            "cardContent": "Pineapple might not be the first thing that comes to mind when you think pizza. But add in some ham and it creates an unexpectedly solid sweet and salty combination for this type of pizza."
             })
 
             </div>
@@ -158,7 +166,8 @@
               @@include('./partials/menu-card/_arcticle.html',
             {
             "imgPath": "/img/pizza9.jpg",
-            "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
+            "cardname": "Buffalo Pizza",
+            "cardContent": "Who says your pizza has to be strictly tomato-sauce based? Branch out with some buffalo sauce on your pie. All its spicy, salty, buttery goodness is a natural pairing for pizza."
             })
 
             </div>
