--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,20 @@
      <div class="sss"></div>
     <section class="reviews">
       <div class="reviews__blog">
-        <div class="reviews__photo">
+        <div class="reviews__photo"
+        style="background-image: url(/img/user1.jpg);">
+
+        </div>
+        <div class="reviews__comment">
+          <h4> Rjkz</h4>
+          Спасибо за отличные новинки, очень понравилась пицца "Итальянская Классика" с Пармской ветчиной, Вы одна из немногих компаний, где за не очень дорого можно попробовать настоящие продукты- хороший сыр и дорогую ветчину.Спасибо.
+
+        </div>
+
+      </div>
+      <div class="reviews__blog">
+        <div class="reviews__photo" 
+        style="background-image: url(/img/user2.jpg);">
 
         </div>
         <div class="reviews__comment">
@@ -199,18 +212,8 @@
 
       </div>
       <div class="reviews__blog">
-        <div class="reviews__photo">
-
-        </div>
-        <div class="reviews__comment">
-          Спасибо за отличные новинки, очень понравилась пицца "Итальянская Классика" с Пармской ветчиной, Вы одна из немногих компаний, где за не очень дорого можно попробовать настоящие продукты- хороший сыр и дорогую ветчину. Так держать.
-           Всегда ждем Вашу доставку как праздник. Спасибо.
-
-        </div>
-
-      </div>
-      <div class="reviews__blog">
-        <div class="reviews__photo">
+        <div class="reviews__photo"
+        style="background-image: url(/img/user3.jpg);">
 
         </div>
         <div class="reviews__comment">
