--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js" integrity="sha256-SmCcbf/1ehhlBnw3ZGinNu6fjQV471LDBjc4yMMJhsk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      
   </head>
   <body>
     <main class="primary-nav">
@@ -246,7 +247,7 @@
          <ul>
            <li>
              <p>Контактный телефон:</p> 
-             <a href="#">+3231235454</a>
+             <a title="Viber" href="viber://chat?number=+120345678910" target="_blank">+120345678910</a>
            </li>
            <li>
              <p>Основной офис:</p> 
@@ -254,7 +255,7 @@
            </li>
            <li>
              <p>Служба доставки:</p> 
-             <a href="https://glovoapp.com/">GLovo</a>
+             <a href="https://glovoapp.com/" target="_blank">GLovo</a>
            </li>
            <li>
              <p>FAQ</p> 
