--- a/src/index.html
+++ b/src/index.html
@@ -18,23 +18,25 @@
            <div class="header__logo">
              <img class="imglogo" src="/img/pizaahut_logo.jpg" >
            </div>
-           <div class="header__nav">
-               <ul class="header__menu">
+           <nav class="header__nav">
+             <ul class="header__menu">
+               <li>
                  <a href="#HOT">Главная</a>
-               </ul>
-               <ul class="header__menu">
-                <a  href="#111">Блюдо дня</a>
-               </ul>
-               <ul class="header__menu">
-                <a href="#">меню</a>
-               </ul>
-               <ul class="header__menu">
-                <a  href="#">Отзывы</a>
-               </ul>
-               <ul class="header__menu">
+               </li>
+               <li>
+                  <a  href="#111">Блюдо дня</a>
+               </li>
+               <li>
+                  <a href="#">меню</a>
+               </li>
+               <li>
+                  <a  href="#">Отзывы</a>
+               </li>
+               <li>
                  <a  href="#">Контакты</a>
-               </ul>
-           </div>
+               </li>
+            </ul>
+           </nav>
             </div>
           </div>
       </header>
@@ -96,7 +98,7 @@
               {
             "imgPath": "/img/pizzaone.jpg",
             "cardname": "Veggie Pizza",
-            "cardCena": "10$",
+            "cardCena": "30$",
             "cardContent": "When you want to jazz up your cheese pizza with color and texture, veggies are the perfect topping. And you’re only limited by your imagination."
                   })
 
