--- a/src/index.html
+++ b/src/index.html
@@ -14,29 +14,32 @@
   <body>
     <main class="primary-nav">
       <header class="header">
-          <div class="headertitile">
+          <div class="header__body">
            <div class="header__logo">
              <img class="imglogo" src="/img/pizaahut_logo.jpg" >
            </div>
-           <nav class="header__nav">
-             <ul class="header__menu">
-               <li>
-                 <a href="#HOT">Главная</a>
-               </li>
-               <li>
-                  <a  href="#111">Блюдо дня</a>
-               </li>
-               <li>
-                  <a href="#">меню</a>
-               </li>
-               <li>
-                  <a  href="#">Отзывы</a>
-               </li>
-               <li>
-                 <a  href="#">Контакты</a>
-               </li>
-            </ul>
-           </nav>
+           <div class="header__burger">
+             <span></span>
+           </div>
+              <nav class="header__nav">
+                <ul class="header__list">
+                  <li>
+                    <a href="#HOT" class="header__link">Главная</a>
+                  </li>
+                  <li>
+                      <a href="#111" class="header__link">Блюдо дня</a>
+                  </li>
+                  <li>
+                      <a href="#" class="header__link">Mеню</a>
+                  </li>
+                  <li>
+                      <a  href="#" class="header__link">Отзывы</a>
+                  </li>
+                  <li>
+                    <a  href="#" class="header__link">Контакты</a>
+                  </li>
+                </ul>
+              </nav>
             </div>
           </div>
       </header>
