--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body>
     <main class="primary-nav">
       <header class="header">
-          <div class="header__body">
+          <div class="header__body container">
            <div class="header__logo">
              <img class="imglogo" src="/img/pizaahut_logo.jpg" >
            </div>
@@ -40,6 +40,7 @@
                   </li>
                 </ul>
               </nav>
+              
             </div>
           </div>
       </header>
@@ -111,7 +112,7 @@
             {
             "imgPath": "/img/chess.jpg",
             "cardname": "Cheese Pizza",
-            "cardCena": "10$",
+            "cardCena": "12$",
             "cardContent": "It should be no shocker that a classic is the statistical favorite. Cheese pizza is one of the most popular choices. It will always be a simple, unadorned masterpiece on its own."
                   })
 
@@ -121,7 +122,7 @@
             {
             "imgPath": "/img/pizza5.png",
             "cardname": "Meat Pizza",
-            "cardCena": "10$",
+            "cardCena": "31$",
             "cardContent": "If pepperoni just isn’t enough, and you’re looking for a pie with a bit more heft, a meat pizza is a perfect and popular choice. Pile on ground beef and sausage for a hearty meal."
             })
 
@@ -131,7 +132,7 @@
             {
             "imgPath": "/img/pizzatwo.jpg",
             "cardname": "peperoni",
-            "cardCena": "10$",
+            "cardCena": "11$",
             "cardContent": "Hoof is our most talanted designer.  However he`s not the talkative type and l would advise not getting on the wrong side of him."
             })
 
@@ -141,7 +142,7 @@
             {
             "imgPath": "/img/pizzathree.jpg",
             "cardname": "Pepperoni Pizza",
-            "cardCena": "10$",
+            "cardCena": "21$",
             "cardContent": "There’s a reason this is one of the most popular types of pizza. Who doesn’t love biting into a crispy, salty round of pepperoni?"
             })
 
@@ -161,7 +162,7 @@
             {
             "imgPath": "/img/pizza7.jpg",
             "cardname": "BBQ Chicken Pizza",
-            "cardCena": "10$",
+            "cardCena": "22$",
             "cardContent": "If you love BBQ chicken and you love pizza, why not put them together? This has long been a cult favorite of sports fans and college kids. "
             })
 
@@ -171,7 +172,7 @@
             {
             "imgPath": "/img/pizza8.jpg",
             "cardname": "Hawaiian Pizza",
-            "cardCena": "10$",
+            "cardCena": "16$",
             "cardContent": "Pineapple might not be the first thing that comes to mind when you think pizza. But add in some ham and it creates an unexpectedly solid sweet and salty combination for this type of pizza."
             })
 
@@ -181,7 +182,7 @@
             {
             "imgPath": "/img/pizza9.jpg",
             "cardname": "Buffalo Pizza",
-            "cardCena": "10$",
+            "cardCena": "17$",
             "cardContent": "Who says your pizza has to be strictly tomato-sauce based? Branch out with some buffalo sauce on your pie. All its spicy, salty, buttery goodness is a natural pairing for pizza."
             })
 
@@ -280,10 +281,10 @@
 
        </div>
        <div class="footer__networks">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-instagram "></a>
-        <a href="#" class="fa fa-skype"></a>
+        <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/?lang=ru" target="_blank" class="fa fa-twitter"></a>
+        <a href="https://www.instagram.com/?hl=ru" target="_blank" class="fa fa-instagram "></a>
+        <a href="https://www.skype.com/ru/" target="_blank" class="fa fa-skype"></a>
 
          
 
