--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                     <a href="#HOT" class="header__link">Главная</a>
                   </li>
                   <li>
-                      <a href="#111" class="header__link">Блюдо дня</a>
+                      <a href="#111" class="header__link">HOT</a>
                   </li>
                   <li>
                       <a href="#" class="header__link">Mеню</a>
@@ -60,7 +60,7 @@
         </div>  
 
       </div>
-         <H2 id="111">Блюдо дня</H2>
+         <H2 id="111">HOT</H2>
         <div class="sss"></div>
         <div class="splide container">
           <div class="splide__track">
