--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js" integrity="sha256-SmCcbf/1ehhlBnw3ZGinNu6fjQV471LDBjc4yMMJhsk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      
+
   </head>
   <body>
     <main class="primary-nav">
-      <header class="header">
+      <header id="body" class="header">
           <div class="header__body container">
            <div class="header__logo">
              <img class="imglogo" src="/img/pizaahut_logo.jpg" >
@@ -23,20 +23,20 @@
            </div>
               <nav class="header__nav">
                 <ul class="header__list">
-                  <li>
-                    <a href="#HOT" class="header__link">Главная</a>
+                  <li >
+                    <a href="#111" class="header__link">Главная</a>
                   </li>
                   <li>
-                      <a href="#111" class="header__link">HOT</a>
+                      <a href="#HOT" class="header__link">HOT</a>
                   </li>
                   <li>
-                      <a href="#" class="header__link">Mеню</a>
+                      <a href="#menu" class="header__link">Mеню</a>
                   </li>
                   <li>
-                      <a  href="#" class="header__link">Отзывы</a>
+                      <a  href="#reviews" class="header__link">Отзывы</a>
                   </li>
                   <li>
-                    <a  href="#" class="header__link">Контакты</a>
+                    <a  href="#contacts" class="header__link">Контакты</a>
                   </li>
                 </ul>
               </nav>
@@ -44,7 +44,7 @@
             </div>
           </div>
       </header>
-      <div class="banner">
+      <div id="111" class="banner">
         <div class="banner__mein">
           <h1 class="banner__title">PIZZA HUT POLAND</h1>
           <p>PIZZA Z DOWOZEM GDAŃSK</p>
@@ -60,7 +60,7 @@
         </div>  
 
       </div>
-         <H2 id="111">HOT</H2>
+         <H2 id="HOT">HOT</H2>
         <div class="sss"></div>
         <div class="splide container">
           <div class="splide__track">
@@ -94,7 +94,7 @@
         </script>
   
     </main>
-    <H2 id="111">Меню</H2>
+    <H2 id="menu">Меню</H2>
      <div class="sss"></div>
     <section class="menu container">
             <div class="menu__menu-card">          
@@ -102,7 +102,7 @@
               {
             "imgPath": "/img/pizzaone.jpg",
             "cardname": "Veggie Pizza",
-            "cardCena": "30$",
+            "cardCena": "32$",
             "cardContent": "When you want to jazz up your cheese pizza with color and texture, veggies are the perfect topping. And you’re only limited by your imagination."
                   })
 
@@ -192,7 +192,7 @@
       
 
     </section>
-    <H2 id="111">Отзывы</H2>
+    <H2 id="reviews">Отзывы</H2>
      <div class="sss"></div>
     <section class="reviews container">
       <div class="reviews__blog">
@@ -236,7 +236,7 @@
 
 
     </section>
-    <H2 id="111">Контакты</H2>
+    <H2 id="contacts">Контакты</H2>
      <div class="sss"></div>
      <section class="container contacts">
        <div class="contacts__maps">
