--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 
       </div>
          <H2 id="HOT">HOT</H2>
-        <div class="sss"></div>
+        <div class="separator"></div>
         <div class="splide container">
           <div class="splide__track">
             <ul class="splide__list">         
@@ -94,9 +94,12 @@
         </script>
   
     </main>
-    <H2 id="menu">Меню</H2>
-     <div class="sss"></div>
+    
     <section class="menu container">
+            <H2 id="menu">Меню</H2>            
+            <div class="location">
+              <div class="separator"></div>
+            </div>
             <div class="menu__menu-card">          
              @@include('./partials/menu-card/_arcticle.html',
               {
@@ -192,53 +195,59 @@
       
 
     </section>
-    <H2 id="reviews">Отзывы</H2>
-     <div class="sss"></div>
     <section class="reviews container">
-      <div class="reviews__blog">
-        <div class="reviews__photo"
-        style="background-image: url(/img/user1.jpg);">
+              <H2 id="menu">Отзывы</H2>            
+              <div class="location">
+              <div class="separator"></div>
+              </div>
+      <div class="review">
+        <div class="reviews__blog">
+          <div class="reviews__photo"
+          style="background-image: url(/img/user1.jpg);">
+
+          </div>
+          <div class="reviews__comment">
+            <h4> Александр:</h4>
+            Спасибо за отличные новинки, очень понравилась пицца "Итальянская Классика" с Пармской ветчиной, Вы одна из немногих компаний, где за не очень дорого можно попробовать настоящие продукты- хороший сыр и дорогую ветчину.Спасибо.
+
+          </div>
 
         </div>
-        <div class="reviews__comment">
-          <h4> Александр:</h4>
-          Спасибо за отличные новинки, очень понравилась пицца "Итальянская Классика" с Пармской ветчиной, Вы одна из немногих компаний, где за не очень дорого можно попробовать настоящие продукты- хороший сыр и дорогую ветчину.Спасибо.
+        <div class="reviews__blog">
+          <div class="reviews__photo" 
+          style="background-image: url(/img/user2.jpg);">
+
+          </div>
+          <div class="reviews__comment">
+            <h4> Юля:</h4>
+            Спасибо за отличные новинки, очень понравилась пицца "Итальянская Классика" с Пармской ветчиной, Вы одна из немногих компаний, где за не очень дорого можно попробовать настоящие продукты- хороший сыр и дорогую ветчину. Так держать.
+            Спасибо.
+
+          </div>
 
         </div>
+        <div class="reviews__blog">
+          <div class="reviews__photo"
+          style="background-image: url(/img/user3.jpg);">
 
-      </div>
-      <div class="reviews__blog">
-        <div class="reviews__photo" 
-        style="background-image: url(/img/user2.jpg);">
+          </div>
+          <div class="reviews__comment">
+            <h4> Патрик:</h4>
+            Спасибо за отличные новинки, очень понравилась пицца "Итальянская Классика" с Пармской ветчиной, Вы одна из немногих компаний, где за не очень дорого можно попробовать настоящие продукты- хороший сыр и дорогую ветчину. Так держать.
+            Спасибо.
 
-        </div>
-        <div class="reviews__comment">
-          <h4> Юля:</h4>
-          Спасибо за отличные новинки, очень понравилась пицца "Итальянская Классика" с Пармской ветчиной, Вы одна из немногих компаний, где за не очень дорого можно попробовать настоящие продукты- хороший сыр и дорогую ветчину. Так держать.
-           Спасибо.
-
-        </div>
-
-      </div>
-      <div class="reviews__blog">
-        <div class="reviews__photo"
-        style="background-image: url(/img/user3.jpg);">
+          </div>
 
         </div>
-        <div class="reviews__comment">
-          <h4> Патрик:</h4>
-          Спасибо за отличные новинки, очень понравилась пицца "Итальянская Классика" с Пармской ветчиной, Вы одна из немногих компаний, где за не очень дорого можно попробовать настоящие продукты- хороший сыр и дорогую ветчину. Так держать.
-           Спасибо.
-
-        </div>
-
-      </div>
+    </div>
 
 
     </section>
-    <H2 id="contacts">Контакты</H2>
-     <div class="sss"></div>
      <section class="container contacts">
+      <H2 id="menu">Контакты</H2>            
+      <div class="location">
+      <div class="separator"></div>
+      </div>
        <div class="contacts__maps">
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d37294.9427767772!2d18.63712725!3d54.25205424999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2spl!4v1622746452308!5m2!1sru!2spl"
            width="600"
