--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
             </div>  
 
           </div>
-            <H2 id="HOT">HOT</H2>
+            <H2> <span id="HOT"></span> HOT</H2>
             <div class="separator"></div>
             <div class="splide container">
               <div class="splide__track">
@@ -95,7 +95,7 @@
   
     </main>
     <section class="menu container">
-            <H2 id="menu">Меню</H2>            
+            <H2 ><span id="menu"></span>Меню</H2>            
             <div class="location">
               <div class="separator"></div>
             </div>
@@ -195,7 +195,7 @@
 
     </section>
     <section class="reviews container">
-              <H2 id="reviews">Отзывы</H2>            
+              <H2 ><span id="reviews"></span>Отзывы</H2>            
               <div class="location">
               <div class="separator"></div>
               </div>
@@ -243,7 +243,7 @@
 
     </section>
     <section class="container contacts">
-      <H2 id="contacts"> Контакты</H2>            
+      <H2><span id="contacts"></span> Контакты</H2>            
       <div class="location">
       <div class="separator"></div>
       </div>
