--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                 Na rynku działamy od 1998 roku, nieustannie rozwijając się i dokładając starań, by do naszych klientów trafiała najlepsza pizza. Gdańsk urzeknie Cię smakiem włoskiej kuchni, a nasza pizzeria z pewnością przypadnie Ci do gustu. Jedząc u nas lub zamawiając pizzę z dostawą, masz pewność, że ciasto będzie cienkie i pyszne. Wszystkie dodatki będą świeże i skomponowane w taki sposób, by stworzyć jak najlepsze, wyjątkowe połączenie. Z Pizzą Fabryka wybierzesz się w fascynujący świat włoskiej kuchni.
               </div>
               <div class="button">
-                <button class="button__order">Сделать Заказа</button>
+                <button class="button__order">Сделать Заказ</button>
               </div>
             </div>  
 
@@ -289,7 +289,7 @@
 
        </div>
        <div class="footer__networks">
-        <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
+        <a href="https://rt.pornhub.com/video/search?search=pornohub" target="_blank" class="fa fa-facebook"></a>
         <a href="https://twitter.com/?lang=ru" target="_blank" class="fa fa-twitter"></a>
         <a href="https://www.instagram.com/?hl=ru" target="_blank" class="fa fa-instagram "></a>
         <a href="https://www.skype.com/ru/" target="_blank" class="fa fa-skype"></a>
